samples/_failures_safe/1761083334_02da50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91666964.c: In function ‘parser_advance’:
./samples/SAFE/__tmp_91666964.c:153: error: expected ‘{’ at end of input
